Suggestion alignment fix

--- a/src/components/shell/shell.component.scss
+++ b/src/components/shell/shell.component.scss
@@ -31,9 +31,15 @@
     white-space: pre-line;
   }
 
+  &__entry,
+  &__overlay-suggestion {
+    word-break: break-all;
+  }
+
   &__entry {
     color: var(--fg-color);
     caret-color: var(--fg-color);
+    margin-right: -1px;
     border-right: 1px solid transparent;
     outline: none;
 
